# OBSmini_ADC

./: CMakeLists.txt  README.rst  prj.conf
custom_key_dir/: OBSmini-rsa-2048.pem
src/: main.c
